--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 </head>
 <body>
     <div class="container">
-        <article class="main-image">
+        <div class="main-image">
             <img src="./images/image-equilibrium.jpg" alt="">
             <div>
                 <img src="./images/icon-view.svg" alt="">
             </div>
-        </article>
-        <article>
+        </div>
+        <div>
             <h2>Equilibrium #3429</h2>
             <p>Our Equilibrium collection promotes balance and calm.</p>
             <ul>
                 <li><img src="./images/icon-ethereum.svg" alt="">0.041 ETH</li>
                 <li><img src="./images/icon-clock.svg" alt="">3 days left</li>
             </ul>
-        </article>
-        <article class="avatar">
+        </div>
+        <div class="avatar">
             <img src="./images/image-avatar.png" alt="">
             <p>Creation of <span>Jules Wyvern</span></p>
-        </article>  
+        </div>  
     </div>
   
     <div class="attribution">
