--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="main-container">
         <div class="main-image">
             <img src="./images/image-equilibrium.jpg" alt="">
             <div>
